--- a/iles-formula.html
+++ b/iles-formula.html
@@ -135,22 +135,23 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 0 20px 40px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .content-side {
                 width: 100%;
                 margin-left: 0;
                 padding: 20px;
+                box-sizing: border-box;
             }
             .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
                 display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
+                padding-bottom: 20px;
             }
             .info-side .footer-bottom {
                 display: none;
@@ -177,7 +178,7 @@
             }
             .description { 
                 text-align: left; 
-                margin-top: 20px;
+                margin-top: 0;
             }
         }
     </style>
@@ -199,8 +200,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="simplie.html">‹ Previous</a>
-                <a href="trendyol.html">Next ›</a>
+                <a href="SIMPLIE.html">‹ Previous</a>
+                <a href="TRENDYOL.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -218,8 +219,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="simplie.html">‹ Previous</a>
-        <a href="trendyol.html">Next ›</a>
+        <a href="SIMPLIE.html">‹ Previous</a>
+        <a href="TRENDYOL.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
