--- a/me.html
+++ b/me.html
@@ -143,20 +143,20 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 0 20px 40px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .right-side {
                 display: none;
             }
             .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
                 display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
+                padding-bottom: 20px;
             }
             .mobile-gallery {
                 display: flex;
@@ -196,7 +196,7 @@
             }
             .description { 
                 text-align: left; 
-                margin-top: 20px;
+                margin-top: 0;
             }
         }
     </style>
@@ -220,8 +220,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="basler-beauty.html">‹ Previous</a>
-                <a href="simplie.html">Next ›</a>
+                <a href="BASLER-BEAUTY.html">‹ Previous</a>
+                <a href="SIMPLIE.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -243,8 +243,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="basler-beauty.html">‹ Previous</a>
-        <a href="simplie.html">Next ›</a>
+        <a href="BASLER-BEAUTY.html">‹ Previous</a>
+        <a href="SIMPLIE.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
