--- a/trendyol.html
+++ b/trendyol.html
@@ -112,20 +112,20 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 0 20px 40px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .right-side {
                 display: none;
             }
             .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
                 display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
+                padding-bottom: 20px;
             }
             .mobile-gallery {
                 display: flex;
@@ -165,7 +165,7 @@
             }
             .description { 
                 text-align: left; 
-                margin-top: 20px;
+                margin-top: 0;
             }
         }
     </style>
@@ -184,8 +184,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="iles-formula.html">‹ Previous</a>
-                <a href="kaa.html">Next ›</a>
+                <a href="ILES-FORMULA.html">‹ Previous</a>
+                <a href="KAA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -209,8 +209,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="iles-formula.html">‹ Previous</a>
-        <a href="kaa.html">Next ›</a>
+        <a href="ILES-FORMULA.html">‹ Previous</a>
+        <a href="KAA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
