--- a/project1.html
+++ b/project1.html
@@ -146,13 +146,23 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 40px 20px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .content-side {
                 width: 100%;
                 margin-left: 0;
                 padding: 20px;
+                box-sizing: border-box;
+            }
+            .back-link {
+                display: block;
+                padding-bottom: 20px;
             }
             .info-side .footer-bottom {
                 display: none;
@@ -177,7 +187,10 @@
                 color: #0D0D0D;
                 text-decoration: none;
             }
-            .description { text-align: left; }
+            .description {
+                text-align: left;
+                margin-top: 0;
+            }
         }
     </style>
 </head>
