--- a/project5.html
+++ b/project5.html
@@ -164,8 +164,13 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 40px 20px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .scroll-wrapper {
                 width: 100%;
@@ -173,6 +178,10 @@
                 height: auto;
                 overflow: visible;
                 display: block;
+            }
+            .back-link {
+                display: block;
+                padding-bottom: 20px;
             }
             .content-side {
                 display: flex;
@@ -209,7 +218,10 @@
                 color: #0D0D0D;
                 text-decoration: none;
             }
-            .description { text-align: left; }
+            .description {
+                text-align: left;
+                margin-top: 0;
+            }
         }
     </style>
 </head>
