--- a/simplie.html
+++ b/simplie.html
@@ -143,22 +143,23 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 0 20px 40px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .content-side {
                 width: 100%;
                 margin-left: 0;
                 padding: 20px;
+                box-sizing: border-box;
             }
             .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
                 display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
+                padding-bottom: 20px;
             }
             .info-side .footer-bottom {
                 display: none;
@@ -185,7 +186,7 @@
             }
             .description { 
                 text-align: left; 
-                margin-top: 20px;
+                margin-top: 0;
             }
         }
     </style>
@@ -207,8 +208,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="me.html">‹ Previous</a>
-                <a href="iles-formula.html">Next ›</a>
+                <a href="ME.html">‹ Previous</a>
+                <a href="ILES-FORMULA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -227,8 +228,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="me.html">‹ Previous</a>
-        <a href="iles-formula.html">Next ›</a>
+        <a href="ME.html">‹ Previous</a>
+        <a href="ILES-FORMULA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
