--- a/speexx.html
+++ b/speexx.html
@@ -161,8 +161,13 @@
             .info-side {
                 width: 100%;
                 height: auto;
-                position: relative;
-                padding: 0 20px 40px;
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                background: #ffffff;
+                padding: 40px 20px 20px;
+                box-sizing: border-box;
             }
             .scroll-wrapper {
                 width: 100%;
@@ -172,13 +177,8 @@
                 display: block;
             }
             .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
                 display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
+                padding-bottom: 20px;
             }
             .content-side {
                 display: flex;
@@ -217,7 +217,7 @@
             }
             .description { 
                 text-align: left; 
-                margin-top: 20px;
+                margin-top: 0;
             }
         }
     </style>
@@ -236,8 +236,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="kaa.html">‹ Previous</a>
-                <a href="basler-beauty.html">Next ›</a>
+                <a href="KAA.html">‹ Previous</a>
+                <a href="BASLER-BEAUTY.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -260,8 +260,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="kaa.html">‹ Previous</a>
-        <a href="basler-beauty.html">Next ›</a>
+        <a href="KAA.html">‹ Previous</a>
+        <a href="BASLER-BEAUTY.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
