--- a/simplie.html
+++ b/simplie.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
+    <meta name="robots" content="noindex, nofollow">
     <meta name="googlebot" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
+    <meta property="og:title" content="Simplie Hair | Lisa Voronov">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
         @font-face {
@@ -29,11 +32,10 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            overflow-y: auto; 
-            /* Плавный скролл для браузеров */
-            scroll-behavior: smooth; 
+            overflow-x: hidden;
         }
 
+        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -49,19 +51,16 @@
             z-index: 10;
         }
 
-        .back-link, .description, .nav-arrows, .footer-bottom {
-            font-size: 15px;
-        }
-
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            line-height: 1;
+            font-size: 15px;
         }
 
         .description {
+            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -69,42 +68,15 @@
             text-align-last: left;
         }
 
-        .brand-name {
-            font-family: 'Notbad Sans Bold', sans-serif;
-            font-weight: bold;
-        }
+        .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
 
-        .left-footer {
-            display: flex;
-            flex-direction: column;
-            gap: 15px; 
-        }
-
-        .nav-arrows {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0; 
-        }
-
-        .nav-arrows a {
-            text-decoration: none;
-            color: #0D0D0D;
-            transition: opacity 0.3s;
-        }
-
+        .left-footer { display: flex; flex-direction: column; gap: 15px; }
+        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
+        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            line-height: 1;
-        }
-
-        .footer-bottom a {
-            color: #0D0D0D;
-            text-decoration: none;
-        }
+        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
+        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .content-side {
             width: 50%;
@@ -119,90 +91,81 @@
             width: 100%;
             display: block;
             margin-bottom: 20px;
-            /* ОПТИМИЗАЦИЯ: Подсказываем браузеру заранее готовить слой для прокрутки */
             will-change: transform;
-            /* Плавное появление при загрузке */
             animation: fadeIn 0.5s ease-in-out;
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        .content-side img:last-child {
-            margin-bottom: 0;
-        }
-        .mobile-footer { display: none; }
-        .mobile-nav { display: none; }
-
+        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
-            body {
-                flex-direction: column;
+            body { flex-direction: column; overflow-y: auto; }
+
+            .mobile-top-nav {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                background: #ffffff;
+                padding: 20px;
+                z-index: 9999;
+                box-sizing: border-box;
+                display: block;
             }
+
             .info-side {
                 width: 100%;
                 height: auto;
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
-                z-index: 100;
-                background: #ffffff;
-                padding: 40px 20px 20px;
-                box-sizing: border-box;
+                position: relative;
+                padding: 80px 20px 20px; 
+                z-index: 10;
             }
+
             .content-side {
                 width: 100%;
                 margin-left: 0;
-                padding: 20px;
-                box-sizing: border-box;
-            }
-            .back-link {
-                display: block;
-                padding-bottom: 20px;
-            }
-            .info-side .footer-bottom {
-                display: none;
-            }
-            .info-side .nav-arrows {
-                display: none;
-            }
-            .mobile-nav {
-                display: flex;
                 padding: 0 20px;
             }
+
+            .info-side .footer-bottom, .info-side .nav-arrows, .info-side .back-link {
+                display: none;
+            }
+
             .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                align-items: center;
-                padding: 20px 20px 50px 20px;
+                padding: 40px 20px;
+                font-size: 14px;
+            }
+            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
+            
+            .mobile-nav-arrows {
+                display: flex;
+                justify-content: space-between;
+                padding: 20px;
+                border-top: 1px solid #eee;
                 font-size: 15px;
-                width: 100%;
-                box-sizing: border-box;
             }
-            .mobile-footer a {
-                color: #0D0D0D;
-                text-decoration: none;
-            }
-            .description { 
-                text-align: left; 
-                margin-top: 0;
-            }
+            .mobile-nav-arrows a { text-decoration: none; color: #0D0D0D; }
+        }
+
+        @media (min-width: 769px) {
+            .mobile-top-nav, .mobile-footer, .mobile-nav-arrows { display: none; }
         }
     </style>
 </head>
 <body>
+
+    <div class="mobile-top-nav">
+        <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
+    </div>
 
     <div class="info-side">
         <div>
             <a href="index.html?p=1" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SIMPLIE HAIR</span> is a brand specializing in hair extensions and professional training for stylists. 
-                <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: 
-                developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing 
-                product and model photo shoots, and preparing materials for print and digital use.
-                My work included concept development, layout, visual storytelling design, pre-press preparation, 
-                production control, and post-production of images for the website, e-commerce, and social media.
+                <br><br>As part of our collaboration, I was responsible for all of the brand's visual and print content: developing multi-page workbooks and B2B brochures, designing packaging, organizing and producing product and model photo shoots, and preparing materials for print and digital use.
             </div>
         </div>
 
@@ -211,7 +174,6 @@
                 <a href="ME.html">‹ Previous</a>
                 <a href="ILES-FORMULA.html">Next ›</a>
             </div>
-
             <div class="footer-bottom">
                 <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
                 <div class="copyright">© 2026 Lisa Voronov</div>
@@ -227,7 +189,7 @@
         <img src="work21.png" loading="lazy" decoding="async">
     </div>
 
-    <div class="nav-arrows mobile-nav">
+    <div class="mobile-nav-arrows">
         <a href="ME.html">‹ Previous</a>
         <a href="ILES-FORMULA.html">Next ›</a>
     </div>
