--- a/iles-formula.html
+++ b/iles-formula.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>ILES FORMULA | Lisa Voronov</title>
     <meta property="og:title" content="ILES FORMULA | Lisa Voronov">
@@ -32,9 +32,9 @@
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
             overflow-y: auto; 
+            scroll-behavior: smooth; /* Делает скролл по ссылкам плавным */
         }
 
-        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -50,16 +50,19 @@
             z-index: 10;
         }
 
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
+        }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            font-size: 15px;
+            line-height: 1;
         }
 
         .description {
-            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -67,16 +70,42 @@
             text-align-last: left;
         }
 
-        .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
+        .brand-name {
+            font-family: 'Notbad Sans Bold', sans-serif;
+            font-weight: bold;
+        }
 
-        .left-footer { display: flex; flex-direction: column; gap: 15px; }
+        .left-footer {
+            display: flex;
+            flex-direction: column;
+            gap: 15px; 
+        }
 
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .nav-arrows {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 0; 
+        }
+
+        .nav-arrows a {
+            text-decoration: none;
+            color: #0D0D0D;
+            transition: opacity 0.3s;
+        }
+
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
+        .footer-bottom {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            line-height: 1;
+        }
+
+        .footer-bottom a {
+            color: #0D0D0D;
+            text-decoration: none;
+        }
 
         .content-side {
             width: 50%;
@@ -93,87 +122,85 @@
             margin-bottom: 20px;
         }
 
-        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
+        .content-side img:last-child {
+            margin-bottom: 0;
+        }
+        .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
+
         @media (max-width: 768px) {
-            body { flex-direction: column; }
-
-            /* Та самая фиксированная кнопка */
-            .mobile-top-nav {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                background: #ffffff;
-                padding: 20px;
-                z-index: 9999;
-                box-sizing: border-box;
-                display: block;
+            body {
+                flex-direction: column;
             }
-
             .info-side {
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 20px; /* Сдвигаем описание вниз под кнопку */
-                z-index: 10;
+                padding: 0 20px 40px;
             }
-
             .content-side {
                 width: 100%;
                 margin-left: 0;
-                padding: 0 20px;
+                padding: 20px;
             }
-
-            /* Скрываем десктопные элементы */
-            .info-side .footer-bottom, 
-            .info-side .nav-arrows, 
-            .info-side .back-link {
+            .back-link {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                display: block;
+                background: #ffffff;
+                padding: 40px 0 20px 0;
+                z-index: 100;
+            }
+            .info-side .footer-bottom {
                 display: none;
             }
-
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
+            }
             .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 40px 20px;
-                font-size: 14px;
-            }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            
-            .mobile-nav-arrows {
-                display: flex;
-                justify-content: space-between;
-                padding: 20px;
-                border-top: 1px solid #eee;
+                align-items: center;
+                padding: 20px 20px 50px 20px;
                 font-size: 15px;
+                width: 100%;
+                box-sizing: border-box;
             }
-            .mobile-nav-arrows a { text-decoration: none; color: #0D0D0D; }
-        }
-
-        /* Прячем мобильное на десктопе */
-        @media (min-width: 769px) {
-            .mobile-top-nav, .mobile-footer, .mobile-nav-arrows { display: none; }
+            .mobile-footer a {
+                color: #0D0D0D;
+                text-decoration: none;
+            }
+            .description { 
+                text-align: left; 
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
 <body>
-
-    <div class="mobile-top-nav">
-        <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
-    </div>
 
     <div class="info-side">
         <div>
             <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
-                <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, and promotional materials, as well as online banners and visuals for mailings and e-commerce platforms. My work included concept and visual storytelling, layout and typography, image retouching, pre-press preparation, print coordination, and approval management.
+                <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
+                and promotional materials, as well as online banners and visuals for mailings and e-commerce platforms.
+                My work included concept and visual storytelling, layout and typography, image retouching, 
+                pre-press preparation, print coordination, and approval management to ensure a consistent premium brand image
+                across all communication channels.
             </div>
         </div>
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="SIMPLIE.html">‹ Previous</a>
-                <a href="TRENDYOL.html">Next ›</a>
+                <a href="simplie.html">‹ Previous</a>
+                <a href="trendyol.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -184,15 +211,15 @@
     </div>
 
     <div class="content-side">
-        <img src="work22.png" loading="eager" decoding="async">
+        <img src="work22.png" loading="eager" decoding="sync">
         <img src="work23.png" loading="lazy" decoding="async">
         <img src="work24.png" loading="lazy" decoding="async">
         <img src="work25.png" loading="lazy" decoding="async">
     </div>
 
-    <div class="mobile-nav-arrows">
-        <a href="SIMPLIE.html">‹ Previous</a>
-        <a href="TRENDYOL.html">Next ›</a>
+    <div class="nav-arrows mobile-nav">
+        <a href="simplie.html">‹ Previous</a>
+        <a href="trendyol.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
