--- a/kaa.html
+++ b/kaa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>KAA by Bill Kaulitz | Lisa Voronov</title>
     <meta property="og:title" content="KAA by Bill Kaulitz | Lisa Voronov">
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
+        /* ... (шрифты оставляем без изменений) ... */
         @font-face {
             font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
@@ -32,10 +33,10 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            overflow-x: hidden;
+            overflow: hidden; 
+            height: 100vh;
         }
 
-        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -51,16 +52,20 @@
             z-index: 10;
         }
 
+        .back-link, .description, .nav-arrows, .footer-bottom {
+            font-size: 15px;
+        }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            font-size: 15px;
+            display: inline-block;
+            line-height: 1;
         }
 
         .description {
-            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -68,15 +73,42 @@
             text-align-last: left;
         }
 
-        .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
+        .brand-name {
+            font-family: 'Notbad Sans Bold', sans-serif;
+            font-weight: bold;
+        }
 
-        .left-footer { display: flex; flex-direction: column; gap: 15px; }
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
-        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
+        .left-footer {
+            display: flex;
+            flex-direction: column;
+            gap: 15px; 
+        }
+
+        .nav-arrows {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 0; 
+        }
+
+        .nav-arrows a {
+            text-decoration: none;
+            color: #0D0D0D;
+            transition: opacity 0.3s;
+        }
+
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
-        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
+        .footer-bottom {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            line-height: 1;
+        }
+
+        .footer-bottom a {
+            color: #0D0D0D;
+            text-decoration: none;
+        }
 
         .right-side {
             width: 50%;
@@ -85,6 +117,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
             background: #ffffff;
         }
 
@@ -92,95 +125,99 @@
             width: 80%;
             height: 80vh;
             object-fit: contain;
+            display: block;
         }
 
-        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
+        .mobile-gallery { display: none; }
+        .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
+
         @media (max-width: 768px) {
-            body { flex-direction: column; overflow-y: auto; }
-
-            .mobile-top-nav {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                background: #ffffff;
-                padding: 20px;
-                z-index: 9999;
-                box-sizing: border-box;
-                display: block;
+            body {
+                flex-direction: column;
+                height: auto;
+                overflow-y: auto;
             }
-
             .info-side {
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 20px; 
-                z-index: 10;
+                padding: 0 20px 40px;
             }
-
-            .right-side { display: none; } /* Скрываем слайд-шоу на мобилках */
-
+            .right-side {
+                display: none;
+            }
+            .back-link {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                display: block;
+                background: #ffffff;
+                padding: 40px 0 20px 0;
+                z-index: 100;
+            }
             .mobile-gallery {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                padding: 0 20px;
+                padding: 20px;
                 box-sizing: border-box;
             }
             .mobile-gallery img {
                 width: 100%;
                 height: auto;
                 margin-bottom: 20px;
+                display: block;
             }
-
-            .info-side .footer-bottom, .info-side .nav-arrows, .info-side .back-link {
+            .info-side .footer-bottom {
                 display: none;
             }
-
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
+            }
             .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 40px 20px;
-                font-size: 14px;
-            }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            
-            .mobile-nav-arrows {
-                display: flex;
-                justify-content: space-between;
-                padding: 20px;
-                border-top: 1px solid #eee;
+                align-items: center;
+                padding: 20px 20px 50px 20px;
                 font-size: 15px;
+                width: 100%;
+                box-sizing: border-box;
             }
-            .mobile-nav-arrows a { text-decoration: none; color: #0D0D0D; }
-        }
-
-        @media (min-width: 769px) {
-            .mobile-top-nav, .mobile-footer, .mobile-nav-arrows, .mobile-gallery { display: none; }
+            .mobile-footer a {
+                color: #0D0D0D;
+                text-decoration: none;
+            }
+            .description { 
+                text-align: left; 
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
 <body>
 
-    <div class="mobile-top-nav">
-        <a href="index.html?p=4" class="back-link">← Back to portfolio</a>
-    </div>
-
     <div class="info-side">
         <div>
             <a href="index.html?p=4" class="back-link">← Back to portfolio</a>
             <div class="description">
-                <span class="brand-name">KAA by Bill Kaulitz</span> is a perfume brand.
+                <span class="brand-name">KAA by Bill Kaulitz</span> 
+               is a perfume brand.
                 <br><br>
-                As part of the collaboration, I served as the brand's photographer, responsible for the creative concept, styling, shooting, and post-production of visuals for social media.
+              As part of the collaboration, I served as the brand's photographer, responsible for the creative concept, styling, shooting, and post-production of visuals for social media.
             </div>
         </div>
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="TRENDYOL.html">‹ Previous</a>
-                <a href="SPEEXX.html">Next ›</a>
+                <a href="trendyol.html">‹ Previous</a>
+                <a href="speexx.html">Next ›</a>
             </div>
+
             <div class="footer-bottom">
                 <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
                 <div class="copyright">© 2026 Lisa Voronov</div>
@@ -201,9 +238,9 @@
         <img src="work37.png" loading="lazy">
     </div>
 
-    <div class="mobile-nav-arrows">
-        <a href="TRENDYOL.html">‹ Previous</a>
-        <a href="SPEEXX.html">Next ›</a>
+    <div class="nav-arrows mobile-nav">
+        <a href="trendyol.html">‹ Previous</a>
+        <a href="speexx.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
@@ -212,7 +249,16 @@
     </div>
 
     <script>
-        const images = ['work32.png', 'work33.png', 'work34.png', 'work35.png', 'work36.png', 'work37.png'];
+        const images = [
+            'work32.png',
+            'work33.png',
+            'work34.png',
+            'work35.png',
+ 'work36.png',
+ 'work37.png',
+        ];
+
+        // ПРЕДЗАГРУЗКА: сохраняем картинки в памяти браузера
         const preloadStore = images.map(src => {
             const img = new Image();
             img.src = src;
@@ -222,12 +268,14 @@
         let currentIndex = 0;
         const dynamicImg = document.getElementById('dynamic-work');
 
-        if (dynamicImg) {
-            setInterval(() => {
-                currentIndex = (currentIndex + 1) % images.length;
-                dynamicImg.src = images[currentIndex];
-            }, 1000);
+        function changeImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            dynamicImg.src = images[currentIndex];
         }
+
+        // Запускаем цикл смены каждую секунду
+        setInterval(changeImage, 1000);
     </script>
+
 </body>
 </html>
