--- a/trendyol.html
+++ b/trendyol.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
     <meta name="googlebot" content="noindex, nofollow">
     <title>TRENDYOL | Lisa Voronov</title>
-    <meta property="og:title" content="TRENDYOL | Lisa Voronov">
-    <meta property="og:image" content="https://lisavoronov.com/LV.png">
-    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
+        /* ... (шрифты и базовые стили остаются те же) ... */
         @font-face {
             font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
@@ -32,10 +30,10 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            overflow-x: hidden;
+            overflow: hidden; 
+            height: 100vh;
         }
 
-        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -51,16 +49,18 @@
             z-index: 10;
         }
 
+        .back-link, .description, .nav-arrows, .footer-bottom { font-size: 15px; }
+
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            font-size: 15px;
+            display: inline-block;
+            line-height: 1;
         }
 
         .description {
-            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -71,11 +71,13 @@
         .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
 
         .left-footer { display: flex; flex-direction: column; gap: 15px; }
-        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
+
+        .nav-arrows { display: flex; justify-content: space-between; }
+
         .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
+        .footer-bottom { display: flex; justify-content: space-between; align-items: center; line-height: 1; }
         .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .right-side {
@@ -85,6 +87,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
             background: #ffffff;
         }
 
@@ -92,80 +95,82 @@
             width: 80%;
             height: 80vh;
             object-fit: contain;
+            display: block;
+            /* УБРАЛИ transition: здесь больше нет анимации, только мгновенная смена */
         }
 
-        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
+        .mobile-gallery { display: none; }
+        .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
+
         @media (max-width: 768px) {
-            body { flex-direction: column; overflow-y: auto; }
-
-            /* Наша фиксированная кнопка */
-            .mobile-top-nav {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                background: #ffffff;
-                padding: 20px;
-                z-index: 9999;
-                box-sizing: border-box;
-                display: block;
+            body {
+                flex-direction: column;
+                height: auto;
+                overflow-y: auto;
             }
-
             .info-side {
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 80px 20px 20px; 
-                z-index: 10;
+                padding: 0 20px 40px;
             }
-
-            .right-side { display: none; }
-
+            .right-side {
+                display: none;
+            }
+            .back-link {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                display: block;
+                background: #ffffff;
+                padding: 40px 0 20px 0;
+                z-index: 100;
+            }
             .mobile-gallery {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                padding: 0 20px;
+                padding: 20px;
                 box-sizing: border-box;
             }
             .mobile-gallery img {
                 width: 100%;
                 height: auto;
                 margin-bottom: 20px;
+                display: block;
             }
-
-            .info-side .footer-bottom, .info-side .nav-arrows, .info-side .back-link {
+            .info-side .footer-bottom {
                 display: none;
             }
-
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
+            }
             .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                padding: 40px 20px;
-                font-size: 14px;
-            }
-            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
-            
-            .mobile-nav-arrows {
-                display: flex;
-                justify-content: space-between;
-                padding: 20px;
-                border-top: 1px solid #eee;
+                align-items: center;
+                padding: 20px 20px 50px 20px;
                 font-size: 15px;
+                width: 100%;
+                box-sizing: border-box;
             }
-            .mobile-nav-arrows a { text-decoration: none; color: #0D0D0D; }
-        }
-
-        @media (min-width: 769px) {
-            .mobile-top-nav, .mobile-footer, .mobile-nav-arrows, .mobile-gallery { display: none; }
+            .mobile-footer a {
+                color: #0D0D0D;
+                text-decoration: none;
+            }
+            .description { 
+                text-align: left; 
+                margin-top: 20px;
+            }
         }
     </style>
 </head>
 <body>
-
-    <div class="mobile-top-nav">
-        <a href="index.html?p=3" class="back-link">← Back to portfolio</a>
-    </div>
 
     <div class="info-side">
         <div>
@@ -173,15 +178,16 @@
             <div class="description">
                 <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
                 <br><br>
-                As part of the collaboration, I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear visual storytelling.
+                As part of the collaboration, I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear visual storytelling that highlighted the brand's value and market dynamics.
             </div>
         </div>
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="ILES-FORMULA.html">‹ Previous</a>
-                <a href="KAA.html">Next ›</a>
+                <a href="iles-formula.html">‹ Previous</a>
+                <a href="kaa.html">Next ›</a>
             </div>
+
             <div class="footer-bottom">
                 <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
                 <div class="copyright">© 2026 Lisa Voronov</div>
@@ -202,9 +208,9 @@
         <img src="work31.png" loading="lazy">
     </div>
 
-    <div class="mobile-nav-arrows">
-        <a href="ILES-FORMULA.html">‹ Previous</a>
-        <a href="KAA.html">Next ›</a>
+    <div class="nav-arrows mobile-nav">
+        <a href="iles-formula.html">‹ Previous</a>
+        <a href="kaa.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
@@ -213,22 +219,36 @@
     </div>
 
     <script>
-        const images = ['work26.png', 'work27.png', 'work28.png', 'work29.png', 'work30.png', 'work31.png'];
-        const cache = images.map(src => {
+        const images = [
+            'work26.png',
+            'work27.png',
+            'work28.png',
+            'work29.png',
+            'work30.png',
+            'work31.png'
+        ];
+
+        // 1. Предзагружаем картинки, чтобы они уже были в памяти
+        const cache = [];
+        images.forEach((src) => {
             const img = new Image();
             img.src = src;
-            return img;
+            cache.push(img);
         });
 
         let currentIndex = 0;
         const dynamicImg = document.getElementById('dynamic-work');
 
-        if (dynamicImg) {
-            setInterval(() => {
-                currentIndex = (currentIndex + 1) % images.length;
-                dynamicImg.src = images[currentIndex];
-            }, 1000);
+        // 2. Мгновенная смена без задержек
+        function changeImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            // Теперь это происходит мгновенно, так как файл уже в кэше
+            dynamicImg.src = images[currentIndex];
         }
+
+        // Интервал 1 секунда, как ты и просила
+        setInterval(changeImage, 1000);
     </script>
+
 </body>
 </html>
